--- a/public/styles.css
+++ b/public/styles.css
@@ -382,7 +382,8 @@ form {
     display: flex;
     justify-content: space-between;
     margin-top: 20px; /* Adjust the margin as needed */
-    margin-left: 10px;
+    margin-left: 30px;
+    margin-right: 30px;
 }
 
 .action-button {
@@ -402,4 +403,25 @@ form {
 }
 .action-button:hover{
     background-color: #341c3e;
+}
+.centered-button {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 120px;
+    height: 40px;
+    margin: 10px auto;
+    padding: 10px 20px;
+    text-align: center;
+    text-decoration: none;
+    border-radius: 5px;
+    background-color: #007bff;
+    color: #ffffff;
+    border: none;
+    cursor: pointer;
+    transition: background-color 0.3s;
+}
+
+.centered-button:hover {
+    background-color: #050a10;
 }
